...
    <string name="detailed_event_create_chat">Chat with event owner</string>

    <!-- CreateTupperwareScreen -->
    <string name="TupCreateFormTupName">Tupperware Name</string>
    <string name="TupCreateFormDesc">Description</string>
    <string name="ButtonRowCancel">Cancel</string>
    <string name="ButtonRowDone">Done</string>
    <string name="tupperware_field_description_error">Description cannot be blank</string>
    <string name="tupperware_field_name_error">Name cannot be blank</string>
    <string name="tupperware_field_image_error">Tupperware needs an image</string>


    <!-- SwipeScreen -->
...
    <string name="sign_in_screen_non_exist_user">User does not seem to exist!</string>
    <string name="sign_in_screen_wrong_password">Wrong password!</string>
    <string name="TAG_EMAIL_FIELD">EmailField</string>
    <string name="TAG_PASSWORD_FIELD">PasswordField</string>

    <!--  Profile -->
    <string name="tag_allergies">Allergies</string>
    <string name="tag_favoriteDish">Favorite dish</string>
    <string name="tag_bio">Bio</string>
    <string name="invalid_username_message">This username is not valid</string>
    <string name="tag_defaultProfileImage">defaultProfileImage</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="tag_password">Password</string>
    <string name="tag_password_repeat">Repeat Password</string>
    <string name="tag_email">Email</string>

    <!-- Recipe Screen -->
    <string name="ingredientsTextFieldContentDesc">Ingredients Text field</string>
    <string name="ingredientsTextFieldPlaceholder">Add ingredients</string>
    <string name="RecipePreparationTitle">Preparation</string>
    <string name="RecipeStepsTextFieldPlaceholder">Add recipe steps</string>
    <string name="RecipeStepsTextFieldDesc">Recipe steps text field</string>
    <string name="RecipeNameTextFieldDesc">Recipe name text field</string>
    <string name="RecipeCreationRecipeTitle">Recipe name</string>
    <string name="RecipeNameTextFieldPlaceholder">Add recipe name</string>
    <string name="RecipeCreationIngredientsTitle">Ingredients</string>
    <string name="RecipeCreationScreenServingsTitle">Serves</string>
    <string name="RecipeCreationDifficultyTitle">Difficulty</string>
    <string name="RecipeCreationCookingTimeEntryTitle">Cooking Time</string>
    <string name="RecipeCreationCookingTimeDropDownMenuDesc">Cooking Time DropDownMenu</string>
    <string name="RecipeCreationDifficultyDropDownMenuDesc">Difficulty Drop Down Menu</string>
    <string name="RecipeCreationServingsTextFieldDesc">Servings Text Field</string>

    <!-- recipe feed -->
    <string name="get_top_recipes">Top recipes</string>
    <string name="get_recent_recipes">Most recent recipes</string>
    <string name="empty_recipe_feed">no recipe yet</string>

...
    <string name="label">label</string>
    <string name="question">question</string>
    <string name="option1">option1</string>
    <string name="option2">option2</string>

    <!-- Signup -->
    <string name="btn_continue">continue</string>
    <string name="sign_up_screen_top_bar_message">Enter Email and Password</string>
    <string name="sign_up_screen_password_not_identical">Passwords fields don\'t match</string>
    <string name="sign_up_screen_user_already_exists">User already exists</string>
    <string name="sign_up_screen_password_too_short">Password needs to be at least 6 characters long</string>
    <string name="sign_up_screen_firebase_exception">Request was not successful, please try again</string>
    <string name="sign_up_screen_password_again_field">Repeat password</string>
...
    <string name="sign_up_screen_tag">sign up screen</string>
    <string name="add_profile_info_screen_tag">add profile info screen</string>
    <string name="add_profile_name">What is your name?</string>
    <string name="add_profile_allergies">Do you have any allergies?</string>
    <string name="add_profile_favoriteDish">What is your favorite dish?</string>
    <string name="add_profile_bio">Tell us something about you</string>
    <string name="TAG_USER_FIELD">UserField</string>

    <!-- Permission -->
    <string name="permission_message_singular">The %1\$s permission is important. Please grant it for the app to function properly.</string>
    <string name="permission_message_plural">The following permissions are important: %1\$s. Please grant all of them for the app to function properly.</string>
    <string name="permission_message_singular_recommendation">The %1\$s permission will grant a better experience in the app</string>
    <string name="permission_message_plural_recommendation">The following permissions will grant a better experience in the app: %1\$s.</string>
...
