...
        "1h15",
        "1h30",
        "2h00",
        "2h30",
        "3h00",
        "3h30",
        "4h00",
        "4h30",
    )

    val difficultyOptions = listOf("Easy", "Medium", "Hard")

    // Elements for which UI state is handled from viewModel
    private val _images = mutableStateListOf<Uri>()
    private var _formError = mutableStateOf(false)
    private var _cookingTime = mutableStateOf(cookingTimeOptions[3])
    private var _difficulty = mutableStateOf(difficultyOptions[0])
...
